--- a/app.yaml
+++ b/app.yaml
@@ -5,9 +5,10 @@ api_version: 1
 threadsafe: yes
 
 handlers:
-- url: /favicon.ico
-  static_files: /favicon.ico
-  upload: /favicon.ico
+- url: /favicon\.ico
+  static_files: img/favicon.ico
+  upload: img/favicon\.ico
+
 - url: /
   static_files: index.html
   upload: index.html
